--- a/styles.css
+++ b/styles.css
@@ -10,32 +10,27 @@ body {
   margin: 0;
 }
 
-.avatar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-image: url('https://source.unsplash.com/nKC772R_qog');
-  background-size: cover;
-  background-position: center;
+.custom-tooltip {
   position: relative;
+  background-color: red;
 }
 
-.avatar::before,
-.avatar::after {
+.custom-tooltip::before,
+.custom-tooltip::after {
   --scale: 0;
-  --arrow-size: 20px;
+  --arrow-size: 10px;
   --tooltip-color: green;
 
   position: absolute;
   top: -.25rem;
   left: 50%;
-  transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
+  transform: translateX(20%) translateY(var(--translate-y, 0)) scale(var(--scale));
   transition: 150ms transform;
   transform-origin: bottom center;
 }
 
-.avatar::before {
-  --translate-y: calc(-100% - var(--arrow-size));
+.custom-tooltip::before {
+  --translate-y: calc(20% - var(--arrow-size));
 
   content: attr(data-tooltip);
   color: white;
@@ -43,17 +38,16 @@ body {
   border-radius: .3rem;
   text-align: center;
   width: max-content;
-  max-width: 100%;
   background: var(--tooltip-color);
 }
 
-.avatar:hover::before,
-.avatar:hover::after {
+.custom-tooltip:hover::before,
+.custom-tooltip:hover::after {
   --scale: 1;
 }
 
-.avatar::after {
-  --translate-y: calc(-1 * var(--arrow-size));
+.custom-tooltip::after {
+  --translate-y: calc(1 * var(--arrow-size));
 
   content: '';
   border: var(--arrow-size) solid transparent;
